<resources>
    <string name="app_name">SpaceRoverExpress</string>
    <string name="unlock">UNLOCK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="badges">Badges</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="credits">Credits</string>
    <string name="select_language">Select language</string>
    <string name="select_role">Choose Your Role</string>
    <string name="game">Game</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_statistics">Statistics</string>
    <string name="bottom_nav_options">Options</string>
    <string name="trigger_location_found_dialog">You have discovered</string>
    <string name="trigger_location_start">Continue</string>
    <string name="decrypto_button_unlock">UNLOCK</string>
    <string name="color_button_done">DONE</string>
    <string name="new_location_found">New location found!</string>
    <string name="first_game_tutorial">Find the Status code and tell it to your assistant</string>
    <string name="rover">Rover</string>
    <string name="level_default">Level</string>
    <string name="km_traveled">Kilometers traveled: </string>
    <string name="experience_label">Total experience: </string>
    <string name="location_found_value">0</string>
    <string name="location_found_label">pointOfInterests found: </string>
    <string name="badge_unlocked_value">0</string>
    <string name="badges_unlocked_label">unlocked badges: </string>
    <string name="google_locate_picker_key">YOUR GOOGLE API LOCATE KEY</string>
    <string name="loremipsus">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="change_to_above_map_view">Above view set</string>
    <string name="change_to_gps_map_view">Rover view set</string>
    <string name="change_to_fly_mode">Fly mode set</string>
    <string name="title_location_1">Prato della Valle</string>
    <string name="subtitle_location_1">A date with Galileo</string>
    <string name="description_location_1">Eyes toward the sky and arm pointing at something up there: have you ever met Galileo Galilei in Padua? You will find him in the spectacular Prato della Valle, where he appears as one of the 78 statues of illustrious people that decorate the largest square of the city (maybe the largest in Europe!). The “Prato”, that’s what the locals call this square, although it actually has a elliptical shape and a green island at the centre. It’s in an area reclaimed from a swamp, which was drained at the end of the Eighteenth century. It has always been a lively place and it still hosts a busy market every Saturday.</string>
    <string name="title_location_2">Sant’Antonio Basilica</string>
    <string name="subtitle_location_2">Where Mantegna’s Sun shines</string>
    <string name="description_location_2">For locals ”the Saint” is Saint Anthony: they’ll know who you mean. So universal and loved, he doesn’t even need to be named. Artists such as Giotto, Donatello, Mantegna and Giusto de’Menabuoi have all left their mark on “his” grand Basilica over the centuries. Its domes, its cloisters and its works of art reveal stories of devotion, spirituality and beauty. Inside you’ll find various starry vaults and outside a splendid sun on the entrance, a copy of the one by Mantegna, which you’ll find inside the Basilica. It’s an ancient symbol for divinity.</string>
    <string name="title_location_3">Galileo’s House</string>
    <string name="subtitle_location_3"> </string>
    <string name="description_location_3">Padua is the place where Galileo Galilei lived “the best eighteen years of my whole life”, teaching, studying and observing the sky. He lived in a street once called Borgo Vignali and later rechristened via Galileo Galilei. Apparently that’s the place where he discovered Jupiter’s satellites, a crucial moment in the birth of the modern scientific method. The house is not open to visitors, but there’s a plaque outside in memory of the scientist. For the rest, just free your imagination!</string>
    <string name="title_location_4">Chiesa di San Francesco</string>
    <string name="subtitle_location_4">The stars on</string>
    <string name="description_location_4">Almost hidden in a shadowy street, you will find this beautiful but neglected church, with 26 arches outside. Begun inthe fifteenth century, it was once part of a great complex, including a convent, the first hospital in Padua, the charitable Scuola della Carità and the Oratorio di Santa Margherita. Inside the church, between an almost-secret garden and a canvas ascribed to Veronese, you will also find a plaque to Stella Stella, dedicated by her son.</string>
    <string name="title_location_5">Chiesa di Santa Sofia</string>
    <string name="subtitle_location_5">On Galileo’s traces</string>
    <string name="description_location_5">One of the oldest churches in town, Santa Sofia’s character comes from the contrast between the elegant external structure and the great sparseness of the interior. Its inclined façade can be intimidating, but it’s worth visiting the church because inside you will find other traces of Galileo’s presence. At the end of the nave is baptismal font where Vincenzo, the scientist’s third and last son, was christened.</string>
    <string name="title_location_6">Borgo Altinate</string>
    <string name="subtitle_location_6">The sense of the stars</string>
    <string name="description_location_6">In the past, this street was one of the main thoroughfares of Padua, because it was near the main town canals, which are now filled with soil. The history and cultural richness of the area are evident in the surviving aristocratic palaces, the Pollini conservatory and the Centro Culturale Altinate. Together, they create a lively atmosphere, in which it is pleasant to stroll up to the porta Altinate. Just before you get there, you might notice a curious six pointed ”star” represented on a shield. Some believe it is the symbol of an ancient urban district; others say it represents the wheel of a printing-press, in memory of the first family of publishers in town.</string>
    <string name="title_location_7">Chiesa degli Eremitani</string>
    <string name="subtitle_location_7">The face of the planets</string>
    <string name="description_location_7">Known as the Chiesa degli Eremitani, the Church of the Hermits, because the old monastery attached to it (the current location of the Musei Civici) was a destination for pilgrims passing by. Reconstructed after being bombed in the Second World War, it contains the famous cappella Ovetari, frescoed by Andrea Mantegna, together with other frescos ascribed to Giusto de’ Menabuoi and parts of frescos by Guariento. In the lower left part of the chapel of the apse you will see allegorical decorations of the five planets known to to antiquity, together with the Sun and Moon. Can you identify them?</string>
    <string name="title_location_8">Scrovegni Chapel</string>
    <string name="subtitle_location_8">Where Giotto invented the comet</string>
    <string name="description_location_8">A masterpiece of world art, the chapel was painted by Giotto between 1303 and 1305. It’s a cornucopia of charming visual inventions: a powerful place that almost overwhelms your eyes with the spiritual magic of its frescoes. These depict stories from the New and Old Testament, surmounted by the incredible blue ceiling dotted with stars. That’s where Giotto ‘invented’ the comet as a pictorial subject, representing it for the first time as a ball of fire, with its long tail upwards and the brilliance of the gold tempera painting filling it with light. The inspiration? Maybe Halley’s Comet, visible in the sky when Giotto was working.</string>
    <string name="title_location_9">Caffè Pedrocchi</string>
    <string name="subtitle_location_9">An Egyptian sky at the heart of town</string>
    <string name="description_location_9">Opened in 1831, the Pedrocchi is Padua’s historical café. For years, it has been the meeting point for intellectuals, professors and students. Designed by Giuseppe Jappelli, it was originally open twenty-four hours a day, and that’s why it was known as the “café without doors”. It was at the centre of the upheavals of the Italian Risorgimento, and you can still find the hole made by an Austrian bullet during the riots. Among the various rooms of the upper floor, the Egyptian room reveals unusual attractions: a winged sun that decorates the architrave of the Egyptian-style façade and a splendid starry sky on the ceiling, maybe not Egyptian and only decorative… but it doesn’t matter, it’s still beautiful!</string>
    <string name="title_location_10">Orologio Civile</string>
    <string name="subtitle_location_10">The time of the town</string>
    <string name="description_location_10">When the clock was built, civil time replaced the sun and the bells of the churches in marking out everyday activities. Its location was strategic: in the nerve centre for commercial exchanges, right next to the busiest squares crowded with people going about their everyday business, and just over from the cattle market and the place where you could rent carriages. Even today, it’s still a lively place, where you can take part in the noble art of the promenade so loved by locals, students and tourists.</string>
    <string name="title_location_11">Il Bo</string>
    <string name="subtitle_location_11">Galileo’s University</string>
    <string name="rover_options_title">Game options</string>
    <string name="manual_map_state_title">Fly mode</string>
    <string name="manual_map_state_summary">Let your rover fly like Superman!</string>
    <string name="map_compass">Compass</string>
    <string name="map_compass_summary">"Why doesn\'t your compass work?"</string>
    <string name="other_option_title">Other</string>
    <string name="clear_shared_pref">Delete game data</string>
    <string name="time">Time:</string>
    <string name="attempts">Attempts:</string>
    <string name="score">Score:</string>
    <string name="score_total">Total score:</string>
    <string name="manual_title">MANUAL</string>
    <string name="manual_start_explain">
        Wait until the pilot discovers a point of interest.
        \n\n
        As soon as a place is discovered, ask the pilot for the Status Code
        which will appear in his terminal.
        \n\n
        For each location found the <b>Status Code</b>> will be different, then return here to enter a new one!
        Enter the code to access the game manual. You will have to face two tests to continue, will you be up to?
    </string>
    <string name="manual_next_button">NEXT</string>
    <string name="pilot_assistant_mode_title">Pilot assistent mode</string>
    <string name="pilot_assistant_mode_summary">Are you play alone? No problem.</string>
    <string name="game_end_title">Done!</string>
</resources>