<!--
Space Rover Express
Copyright (C) 2017 Codernauti
Eduard Bicego, Federico Ghirardelli

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_badges"
            android:icon="@drawable/ic_star_gold_24dp"
            android:title="@string/badges" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_toys_black_24dp"
            android:title="@string/game" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/credits" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
